fixed scrollbar overlap on navbar

--- a/src/nyc_trees/sass/partials/_header.scss
+++ b/src/nyc_trees/sass/partials/_header.scss
@@ -77,6 +77,8 @@
 
 .nav-account {
   padding: .9rem;
+  position: relative;
+  min-width: 122px;
 }
 
 .nav-menubutton {
@@ -116,6 +118,7 @@
   left: -30rem;
   z-index: 2;
   transition: all 400ms $transition;
+  transform: translateZ(0);
   .menu-active & {
     left: 0;
     box-shadow: 0px 1rem 6rem 0px #0A0B0B;
@@ -145,9 +148,10 @@
   top: 0;
   overflow: hidden;
   height: $navbar-height;
-  width: 100vw;
+  width: 100%;
   z-index: $zindex-main-header;
   transition: all 400ms $transition;
+  transform: translateZ(0);
 }
 
 .btn-nav-user {
